# GameEngine

./: .gitignore  CMakeCache.txt  CMakeLists.txt  GameEngine  Makefile  cmake_install.cmake  main.cpp
DemoGame/: demo.def
DemoGame/assets/maps/: map1.map
core/: Camera.cpp  Camera.h  ECS.cpp  ECS.h  Event.h  File.cpp  File.h  Game.cpp  Game.h  Scene.cpp  Scene.h  Settings.h  context.h  event.h  game.h  ilist.h
core/ECS/: Component.h  Entity.h  System.h
core/ECS/systems/: Animation.h  Collision.h  Control.h  Event.h  File.h  Render.h  Texture.h
core/components/: Collider.cpp  Collider.h  Control.cpp  Control.h  Render.cpp  Render.h
core/controllers/: Control.cpp  Control.h  Render.cpp  Render.h
core/ecs/: manager.h
core/ecs/base/: component.h  entity.h  system.h
core/ecs/systems/: control.h  render.h
math/: Vector2D.cpp  Vector2D.h  vect.cpp  vect.h
test/: a.out  ilist  ilist.cpp  inh.cpp  shift.cpp
tools/build-mapcreator-Desktop-Debug/: Makefile  mapcreator  moc_bmpwindow.cpp  moc_mainwindow.cpp  ui_bmpwindow.h  ui_mainwindow.h
tools/mapcreator/: bmpwindow.cpp  bmpwindow.h  bmpwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  mapcreator.pro  qtileselector.cpp  qtileselector.h
